cache working for getOverviewAnalytics and getDailyTransactions