@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.paymentservice.config.CacheNames.ANALYTICS;
 
@@ -63,15 +64,15 @@ public class AnalyticsServiceImpl implements AnalyticsService {
                                 projection.getDate(),
                                 projection.getTransactionCount()
                         ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Cacheable(
-            cacheNames = ANALYTICS,
-            key = "'monthly-volume:' + #userId",
-            sync = true
-    )
+//    @Cacheable(
+//            cacheNames = ANALYTICS,
+//            key = "'monthly-volume:' + #userId",
+//            sync = true
+//    )
     public List<MonthlyVolumeResponse> getMonthlyPaymentVolume(Long userId) {
 
         return paymentRepository.getMonthlyTransaction(userId)
@@ -86,11 +87,11 @@ public class AnalyticsServiceImpl implements AnalyticsService {
     }
 
     @Override
-    @Cacheable(
-            cacheNames = ANALYTICS,
-            key = "'payment-status:' + #userId",
-            sync = true
-    )
+//    @Cacheable(
+//            cacheNames = ANALYTICS,
+//            key = "'payment-status:' + #userId",
+//            sync = true
+//    )
     public List<PaymentStatusResponse> getPaymentStatusDistribution(Long userId) {
 
         return paymentRepository.getPaymentStatusDistribution(userId)
@@ -104,11 +105,11 @@ public class AnalyticsServiceImpl implements AnalyticsService {
     }
 
     @Override
-    @Cacheable(
-            cacheNames = ANALYTICS,
-            key = "'top-receivers:' + #userId",
-            sync = true
-    )
+//    @Cacheable(
+//            cacheNames = ANALYTICS,
+//            key = "'top-receivers:' + #userId",
+//            sync = true
+//    )
     public List<TopReceiverResponse> getTopReceivers(Long userId) {
 
         List<TopReceiverProjection> topReceivers =
@@ -125,11 +126,11 @@ public class AnalyticsServiceImpl implements AnalyticsService {
     }
 
     @Override
-    @Cacheable(
-            cacheNames = ANALYTICS,
-            key = "'average-amount:' + #userId",
-            sync = true
-    )
+//    @Cacheable(
+//            cacheNames = ANALYTICS,
+//            key = "'average-amount:' + #userId",
+//            sync = true
+//    )
     public AverageAmountResponse getAverageTransactionAmount(Long userId) {
 
         AverageAmountProjection projection =
@@ -142,11 +143,11 @@ public class AnalyticsServiceImpl implements AnalyticsService {
 
     @Override
     @Transactional(readOnly = true)
-    @Cacheable(
-            cacheNames = ANALYTICS,
-            key = "'dashboard:' + #userId",
-            sync = true
-    )
+//    @Cacheable(
+//            cacheNames = ANALYTICS,
+//            key = "'dashboard:' + #userId",
+//            sync = true
+//    )
     public DashboardAnalyticsResponse getDashboardAnalytics(Long userId) {
 
         return DashboardAnalyticsResponse.builder()
